[package]
name = "try_tup_to_arr_macro"
version = "0.2.0"
edition = "2024"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/try_tup_to_arr_macro"
homepage = "https://github.com/pic16f877ccs/try_tup_to_arr_macro"
license = "MIT OR Apache-2.0"
description = "Library for implement from tuple trait"
keywords = ["proc-macro", "no-std", "try-tuple-convert", "tuple-to-array"]
categories = ["rust-patterns"]

[lib]
name = "try_tup_to_arr_macro"
proc-macro = true

[dependencies]

[features]
try_tup_to_arr_8 = []
try_tup_to_arr_16 = []
try_tup_to_arr_32 = []
try_tup_to_arr_64 = []
